@@ -1,5 +1,6 @@
 v1.03 ??
 Add support for dragging files to a mount's iconbar icon.
+Silently reconnect if a server closes a TCP connection due to inactivity.
 
 v1.02 6-Nov-04
 Added support for TCP connections.
